--- a/pets/implementation.tex
+++ b/pets/implementation.tex
@@ -20,7 +20,8 @@ and the exit proxy; we simulate additional clients on this path by increasing $\
 \end{figure}
 
 \textbf{CDN.} As the design for \system{} requires encrypted content and identifiers
-to be stored in the CDN, we cannot request content from real-world CDNs.  Additionally, 
+to be stored in the CDN, we cannot request content from real-world CDNs without
+establishing a business relationship with an existing CDN ourselves. Additionally,
 we must evaluate the performance of \system{} in comparison to the same content, cache locations, etc., so 
 we set up a data storage server.  This server is run on a Virtual Private Server
 (VPS) located in
