updated pets paper

--- a/pets/conclusion.tex
+++ b/pets/conclusion.tex
@@ -10,6 +10,7 @@ that the CDN never learns the identity of clients that
 make requests for content. \system{} is robust against a strong adversary who
 has access to request logs at the CDN and can also join the system as a
 client, publisher, or CDN. Our evaluation shows that \system{} imposes some performance
-overhead due to the cryptographic operations that allow it to obliviously cache
-content, but that this overhead is acceptable, particularly for the sizes of files
+overhead, %due to the cryptographic operations that allow it to obliviously cache
+%content, 
+but that this overhead is acceptable, particularly for the sizes of files
 that make up common web workloads.
