--- a/pets/main.tex
+++ b/pets/main.tex
@@ -17,7 +17,7 @@
 \graphicspath{ {./figures/} }
 \newcommand{\annie}[1]{\emph{\color{blue}#1}}
  
-\DOI{foobar}
+%\DOI{foobar}
 
 \cclogo{\includegraphics{by-nc-nd.pdf}}
   
