--- a/pets/paper.bib
+++ b/pets/paper.bib
@@ -57,9 +57,9 @@
 }
 
 @inproceedings{monnerat2006d1ht,
-  title={D1HT: a distributed one hop hash table},
+  title="{D1HT: a distributed one hop hash table}",
   author={Monnerat, Luiz Rodolpho and Amorim, Claudio L},
-  booktitle={Parallel and Distributed Processing Symposium, 2006. IPDPS 2006. 20th International},
+  booktitle={International Parallel and Distributed Processing Symposium},
   pages={10--pp},
   year={2006},
   organization={IEEE}
@@ -68,16 +68,16 @@
 @inproceedings{risson2006stable,
   title={Stable high-capacity one-hop distributed hash tables},
   author={Risson, John and Harwood, Aaron and Moors, Tim},
-  booktitle={Computers and Communications, 2006. ISCC'06. Proceedings. 11th IEEE Symposium on},
+  booktitle={IEEE Symposium on Computers and Communications},
   pages={687--694},
   year={2006},
   organization={IEEE}
 }
 
 @article{zhu2005efficient,
-  title={Efficient, proximity-aware load balancing for DHT-based P2P systems},
+  title="{Efficient, proximity-aware load balancing for DHT-based P2P systems}",
   author={Zhu, Yingwu and Hu, Yiming},
-  journal={IEEE Transactions on parallel and distributed systems},
+  journal={IEEE Transactions on Parallel and Distributed Systems},
   volume={16},
   number={4},
   pages={349--361},
@@ -95,18 +95,18 @@
 }
 
 @inproceedings{lesniewski2008sybil,
-  title={A Sybil-proof one-hop DHT},
+  title="{A Sybil-proof one-hop DHT}",
   author={Lesniewski-Laas, Chris},
-  booktitle={Proceedings of the 1st workshop on Social network systems},
+  booktitle={Workshop on Social Network Systems},
   pages={19--24},
   year={2008},
   organization={ACM}
 }
 
 @inproceedings{leong2004achieving,
-  title={Achieving one-hop dht lookup and strong stabilization by passing tokens},
+  title="{Achieving one-hop DHT lookup and strong stabilization by passing tokens}",
   author={Leong, Ben and Li, Ji},
-  booktitle={Networks, 2004.(ICON 2004). Proceedings. 12th IEEE International Conference on},
+  booktitle={IEEE International Conference on Networks},
   volume={1},
   pages={344--350},
   year={2004},
@@ -133,7 +133,7 @@
 @inproceedings{karger1997consistent,
   title={Consistent hashing and random trees: Distributed caching protocols for relieving hot spots on the World Wide Web},
   author={Karger, David and Lehman, Eric and Leighton, Tom and Panigrahy, Rina and Levine, Matthew and Lewin, Daniel},
-  booktitle={Proceedings of the twenty-ninth annual ACM symposium on Theory of computing},
+  booktitle={ACM Symposium on Theory of Computing},
   pages={654--663},
   year={1997},
   organization={ACM}
@@ -157,7 +157,7 @@
 @inproceedings{rackoff1993cryptographic,
   title={Cryptographic defense against traffic analysis},
   author={Rackoff, Charles and Simon, Daniel R},
-  booktitle={Proceedings of the twenty-fifth annual ACM symposium on Theory of computing},
+  booktitle={ACM symposium on Theory of Computing},
   pages={672--681},
   year={1993},
   organization={ACM}
@@ -211,7 +211,7 @@
 @inproceedings{andersen2005improving,
   title={Improving web availability for clients with MONET},
   author={Andersen, David G and Balakrishnan, Hari and Kaashoek, M Frans and Rao, Rohit N},
-  booktitle={Proceedings of the 2nd conference on Symposium on Networked Systems Design \& Implementation-Volume 2},
+  booktitle={Symposium on Networked Systems Design \& Implementation-Volume 2},
   pages={115--128},
   year={2005},
   organization={USENIX Association}
@@ -242,7 +242,7 @@
 @inproceedings{jung2002flash,
   title={Flash crowds and denial of service attacks: Characterization and implications for {CDNs} and web sites},
   author={Jung, Jaeyeon and Krishnamurthy, Balachander and Rabinovich, Michael},
-  booktitle={Proceedings of the 11th international conference on World Wide Web},
+  booktitle={International Conference on World Wide Web},
   pages={293--304},
   year={2002},
   organization={ACM}
@@ -251,7 +251,7 @@
 @inproceedings{wendell2011going,
   title={Going viral: Flash crowds in an open {CDN}},
   author={Wendell, Patrick and Freedman, Michael J},
-  booktitle={Proceedings of the 2011 ACM SIGCOMM conference on Internet measurement conference},
+  booktitle={ACM SIGCOMM Conference on Internet Measurement},
   pages={549--558},
   year={2011},
   organization={ACM}
@@ -269,7 +269,7 @@
 @inproceedings{zolfaghari2016practical,
   title={Practical Censorship Evasion Leveraging Content Delivery Networks},
   author={Zolfaghari, Hadi and Houmansadr, Amir},
-  booktitle={Proceedings of the 2016 ACM SIGSAC Conference on Computer and Communications Security},
+  booktitle={ACM SIGSAC Conference on Computer and Communications Security},
   pages={1715--1726},
   year={2016},
   organization={ACM}
@@ -278,7 +278,7 @@
 @inproceedings{calder2013mapping,
   title={Mapping the expansion of {Google's} serving infrastructure},
   author={Calder, Matt and Fan, Xun and Hu, Zi and Katz-Bassett, Ethan and Heidemann, John and Govindan, Ramesh},
-  booktitle={Proceedings of the 2013 conference on Internet measurement conference},
+  booktitle={ACM Conference on Internet Measurement},
   pages={313--326},
   year={2013},
   organization={ACM}
@@ -318,7 +318,7 @@
 @inproceedings{butkiewicz2011understanding,
   title={Understanding website complexity: measurements, metrics, and implications},
   author={Butkiewicz, Michael and Madhyastha, Harsha V and Sekar, Vyas},
-  booktitle={Proceedings of the 2011 ACM SIGCOMM conference on Internet measurement conference},
+  booktitle={ACM SIGCOMM Conference on Internet Measurement},
   pages={313--328},
   year={2011},
   organization={ACM}
@@ -357,7 +357,7 @@
 @inproceedings{cai2012touching,
   title={Touching from a distance: Website fingerprinting attacks and defenses},
   author={Cai, Xiang and Zhang, Xin Cheng and Joshi, Brijesh and Johnson, Rob},
-  booktitle={Proceedings of the 2012 ACM conference on Computer and communications security},
+  booktitle={ACM Conference on Computer and Communications Security},
   pages={605--616},
   year={2012},
   organization={ACM}
@@ -386,7 +386,8 @@
 
 @misc{rfc2227,
   title = "{Simple Hit-Metering and Usage-Limiting for HTTP}",
-  key = "Simple",
+  author = {J. Mogul and P. Leach},
+  year = {1997},
   howpublished = {\url{https://www.ietf.org/rfc/rfc2227.txt}}
 }
 
@@ -464,7 +465,7 @@
 }
 
 @misc{techdirt_copyright,
-  title = "{Court Says RIAA Can Just Tell Cloudflare Any Site Is A Grooveshark Clone... And Cloudflare Has 48 Hours To Dump Them}",
+  title = "{Court Says RIAA Can Just Tell Cloudflare Any Site Is a Grooveshark Clone... And Cloudflare Has 48 Hours To Dump Them}",
   key = "{}",
   howpublished = {\url{https://www.techdirt.com/articles/20151214/17392833079/court-says-riaa-can-just-tell-cloudflare-any-site-is-grooveshark-clone-cloudflare-has-48-hours-to-dump-them.shtml}}
 }
@@ -472,7 +473,7 @@
 @inproceedings{krishnamurthy2001use,
   title={On the Use and Performance of Content Distribution Networks},
   author={Krishnamurthy, Balachander and Wills, Craig and Zhang, Yin},
-  booktitle={Proceedings of the 1st ACM SIGCOMM Workshop on Internet Measurement},
+  booktitle={ACM SIGCOMM Workshop on Internet Measurement},
   pages={169--182},
   year={2001},
   organization={ACM}
@@ -485,7 +486,7 @@
 }
 
 @inproceedings{khattak2016you,
-  title={Do You See What I See? Differential Treatment of Anonymous Users},
+  title="{Do You See What I See? Differential Treatment of Anonymous Users}",
   author={Khattak, Sheharbano and Fifield, David and Afroz, Sadia and Javed, Mobin and Sundaresan, Srikanth and Paxson, Vern and Murdoch, Steven J and McCoy, Damon},
   booktitle={Network and Distributed System Security Symposium},
   year={2016}
@@ -506,7 +507,7 @@
 @inproceedings{chen2016forwarding,
   title={Forwarding-Loop Attacks in Content Delivery Networks},
   author={Chen, Jianjun and Jiang, Jian and Zheng, Xiaofeng and Duan, Haixin and Liang, Jinjin and Li, Kang and Wan, Tao and Paxson, Vern},
-  booktitle={Proceedings of the 23st Annual Network and Distributed System Security Symposium (NDSS'16)},
+  booktitle={Network and Distributed System Security Symposium (NDSS'16)},
   year={2016}
 }
 
@@ -528,7 +529,7 @@
 @inproceedings{su2008thinning,
   title={Thinning {Akamai}},
   author={Su, Ao-Jan and Kuzmanovic, Aleksandar},
-  booktitle={Proceedings of the 8th ACM SIGCOMM Conference on Internet Measurement},
+  booktitle={ACM SIGCOMM Conference on Internet Measurement},
   pages={29--42},
   year={2008},
   organization={ACM}
@@ -548,7 +549,7 @@
 @inproceedings{michalakis2007ensuring,
   title={Ensuring Content Integrity for Untrusted Peer-to-Peer Content Distribution Networks},
   author={Michalakis, Nikolaos and Soul{\'e}, Robert and Grimm, Robert},
-  booktitle={Proceedings of the 4th USENIX Conference on Networked Systems Design \& Implementation},
+  booktitle={USENIX Conference on Networked Systems Design \& Implementation},
   pages={11--11},
   year={2007},
   organization={USENIX Association}
@@ -564,7 +565,7 @@
 @inproceedings{liang2014https,
   title={When {HTTPS} Meets {CDN}: A Case of Authentication in Delegated Service},
   author={Liang, Jinjin and Jiang, Jian and Duan, Haixin and Li, Kang and Wan, Tao and Wu, Jianping},
-  booktitle={Security and Privacy (S\&P), 2014 IEEE Symposium on},
+  booktitle={IEEE Symposium on Security and Privacy (S\&P)},
   pages={67--82},
   year={2014},
   organization={IEEE}
