--- a/pets/related_work.tex
+++ b/pets/related_work.tex
@@ -13,9 +13,9 @@ integrity of content being served by a proxy~\cite{lesniewski2005ssl}.  While th
 explicitly apply SSL-splitting to CDNs, it is a technique that could be used for content 
 distribution.  Michalakis et al., present a system for ensuring content integrity for untrusted 
 peer-to-peer CDNs~\cite{michalakis2007ensuring}.  This system, Repeat and 
-Compare, use attestation records and a number of peers act as verifiers.  More recently, Levy et al., 
-introduced Stickler, which is a system that allows content publishers to guarantee the end-to-end 
-authenticity of their content to users~\cite{levy2015stickler}.  Stickler includes content publishers 
+Compare, uses attestation records and a number of peers act as verifiers.  More recently, Levy et al., 
+introduced Stickler, which is a system that allows publishers to guarantee the end-to-end 
+authenticity of their content~\cite{levy2015stickler}.  Stickler includes content publishers 
 signing their content, and users verifying the signature without having to modify the browser.  Unfortunately, 
 systems like Stickler do not protect against an adversary that wishes to learn information about content, clients, 
 or publishers; \system{} is complementary to Stickler.\\
