slight elimination of redundancy in abstract.

--- a/pets/abstract.tex
+++ b/pets/abstract.tex
@@ -7,11 +7,9 @@ moderation of online speech, CDNs have found themselves at the forefront of
 many recent legal quandaries. At the heart of the tension, however, is the fact
 that CDNs have rich information both about the content they are serving and the
 users who are requesting that content. 
-This paper offers a technical contribution that is relevant to this ongoing tension
-with the design of an Oblivious CDN (OCDN); the system is both compatible with the existing
-Web ecosystem of publishers and
-clients and hides from the CDN both the content it is serving and the users
-who are requesting that content. \system{} is compatible with the way that publishers
+This paper offers a technical contribution that is relevant to this ongoing tension,
+with the design of an Oblivious CDN (OCDN), which hides from the CDN both the content
+it is serving and the users who are requesting that content. \system{} is compatible with the way that publishers
 currently host content on CDNs. Using \system{}, publishers can use multiple CDNs
 to publish content; clients retrieve content through a peer-to-peer anonymizing network
 of proxies.
